--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
       class="bg-blue-500 text-white text-lg font-semibold py-2 px-4 rounded-full inline-block w-48 mb-4 hover:bg-blue-700 transition duration-300 ease-in-out">
       Ejercicio 8</a>
     <br>
+    <a target="_blank" href="ejercicio9.html"
+      class="bg-blue-500 text-white text-lg font-semibold py-2 px-4 rounded-full inline-block w-48 mb-4 hover:bg-blue-700 transition duration-300 ease-in-out">
+      Ejercicio 9</a>
+    <br>
+    <a target="_blank" href="ejercicio10.html"
+      class="bg-blue-500 text-white text-lg font-semibold py-2 px-4 rounded-full inline-block w-48 mb-4 hover:bg-blue-700 transition duration-300 ease-in-out">
+      Ejercicio 10</a>
+    <br>
   </div>
 
 </body>
